--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-﻿Flask==2.3.3
-transformers==4.31.0
-torch==2.0.1
-requests==2.31.0
-gunicorn==21.2.0
+﻿Flask
+transformers
+torch
+requests
+gunicorn
