--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 ﻿flask==3.0.0
 gunicorn==21.2.0
 transformers==4.35.0
-torch==2.1.0
+torch==2.1.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 sentencepiece==0.1.99
